test/compile_errors/err_trait_eq_body_removed.w
//! expect-check-fail: expected ':' or '{'

trait Legacy =
    fn value(self: &Self) -> i32
